@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <linker>
 	<assembly fullname="mscorlib">
+		<namespace fullname="System.Security.Cryptography" />
 		<type fullname="Mono.Interop.ComInteropProxy" />
 		<type fullname="Mono.Interop.IDispatch" />
 		<type fullname="Mono.Interop.IUnknown" />
@@ -26,6 +27,7 @@
 		<type fullname="System.Char" />
 		<type fullname="System.Collections.Generic.ICollection`1" />
 		<type fullname="System.Collections.Generic.IEnumerable`1" />
+		<type fullname="System.Collections.Generic.IEquatableOfTEqualityComparer`1" />
 		<type fullname="System.Collections.Generic.IList`1" />
 		<type fullname="System.Console" />
 		<type fullname="System.ConsoleDriver" />
